# captain

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  README.md.in  dist-workspace.toml
.claude/: settings.local.json
.conductor/: conductor.json
.config/captain/: config.kdl  config.yaml
.github/workflows/: test.yml
hooks/: pre-commit  pre-push
src/: footer.md  main.rs  readme.rs
src/utils/: dir_size.rs  mod.rs  progress.rs
