[package]
name = "captain"
version = "1.0.1"
edition = "2024"
description = "Development automation tool for Rust workspaces"
keywords = ["code-generation", "templates"]
categories = ["development-tools"]
rust-version = "1.89"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bearcove/captain"

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[dependencies]
cargo_metadata = "0.23.1"
dirs = "6"
facet = { git = "https://github.com/facet-rs/facet" }
facet-kdl = { git = "https://github.com/facet-rs/facet" }
miette = { version = "7", default-features = false, features = ["fancy-no-backtrace"] }
fs-err = "3.2.0"
log = { version = "0.4.29", features = ["std"] }
owo-colors = "4.2.3"
serde_json = "1.0.132"
toml_edit = "0.23"
supports-color = "3.0.2"
strip-ansi-escapes = "0.2.1"
walkdir = "2"
rayon = "1"
indicatif = "0.17"

[dev-dependencies]

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
